--- a/views/post_list.ejs
+++ b/views/post_list.ejs
@@ -6,10 +6,29 @@
 <ol>
     <% results.forEach(function(post) {%>
         <li>
-            <%= post.message %>
+            
+            <p><%= post.message %></p>
+            <p><img src="<%=post.imageUrl%>"></p>
+            <p><%= post.createdAt %></p>
+            <p><%= post.postedBy.username %></p>
+            <p>Likes: <%= post.likedBy.length %></p>
+            <p>Dislikes: <%= post.dislikedBy.length %></p>
+            <form method="post" action="/posts/<%=post.id%>/like/">
+                <button type="submit">Like!</button>
+            </form>
+            <form method="post" action="/posts/<%=post.id%>/dislike/">
+                <button type="submit">Dislike!</button>
+            </form>
+
         </li>
     <% }); %>
 </ol>
+<%if (next) { %>
+    <a href="<%= next %>">Next</a>
+<% } %>
+<%if (previous) { %>
+    <a href="<%= previous %>">Previous</a>
+<% } %>
 </body>
 <%- include('_footer') -%>
 </html>
