--- a/views/create_user.ejs
+++ b/views/create_user.ejs
@@ -4,23 +4,23 @@
 <body>
 <h1>Create User</h1>
 <form method="post" action="/users/create">
-    <label>
+    <label class="formLabel">
         Name:
         <input type="text" name="name" required/>
     </label>
-    <label>
+    <label class="formLabel">
         Username:
         <input type="text" name="username" required/>
     </label>
-    <label>
+    <label class="formLabel">
         Email:
         <input type="email" name="email" required/>
     </label>
-    <label>
+    <label class="formLabel">
         ProfileImageUrl:
         <input type="text" name="profileImageUrl" required/>
     </label>
-    <label>
+    <label class="formLabel">
         CoverImageUrl:
         <input type="text" name="coverImageUrl" required/>
     </label>
