--- a/views/user_detail.ejs
+++ b/views/user_detail.ejs
@@ -3,6 +3,10 @@
 <%- include('_header') -%>
 <body>
 <h1><%= name %></h1>
+<p><img src="<%=coverImageUrl%>" class= "coverPic"></p>
+<p><%= username%></p>
+<p><img src="<%=profileImageUrl%>" class= "profilePic"><p>
+<%= email%>
 </body>
 <%- include('_footer') -%>
 </html>
