--- a/views/post_list.ejs
+++ b/views/post_list.ejs
@@ -3,26 +3,24 @@
 <%- include('_header') -%>
 <body>
 <h1>Posts</h1>
-<ol>
+<div class="allPosts">
     <% results.forEach(function(post) {%>
-        <li>
-            
+        
+        <div class="eachPost">
             <p><%= post.message %></p>
-            <p><img src="<%=post.imageUrl%>"></p>
-            <p><%= post.createdAt %></p>
-            <p><%= post.postedBy.username %></p>
-            <p>Likes: <%= post.likedBy.length %></p>
-            <p>Dislikes: <%= post.dislikedBy.length %></p>
+            <label class="postImage"></label>
+            <img src="<%=post.imageUrl%>" class= "postImage"/>
+            <p>Posted on <%= post.createdAt %> by <%= post.postedBy.username %></p>
+            <p>Likes: <%= post.likedBy.length %> Dislikes: <%= post.dislikedBy.length %></p>
             <form method="post" action="/posts/<%=post.id%>/like/">
-                <button type="submit">Like!</button>
-            </form>
+            <button type="submit"class="likeButton">Like!</button></form>
             <form method="post" action="/posts/<%=post.id%>/dislike/">
-                <button type="submit">Dislike!</button>
-            </form>
-
-        </li>
+            <button type="submit"class="dislikeButton">Dislike!</button></form>
+        </div>
+        
     <% }); %>
-</ol>
+</div>
+
 <%if (next) { %>
     <a href="<%= next %>">Next</a>
 <% } %>
