--- a/views/user_list.ejs
+++ b/views/user_list.ejs
@@ -3,13 +3,17 @@
 <%- include('_header') -%>
 <body>
 <h1>Users</h1>
-<ol>
+
     <% results.forEach(function(user) {%>
-        <li>
+            <p><%= user.username %></p>
             <%= user.name %>
-        </li>
+            <p><%= user.id %></p>
+            <p><img src="<%=user.profileImageUrl%>"></p>
+            
+            
+        
     <% }); %>
-</ol>
+
 <%if (next) { %>
     <a href="<%= next %>">Next</a>
 <% } %>
