--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,6 +11,7 @@ h2 {
     width: 100%;
     top: 10px;
     height: auto;
+    z-index: -1;
 
 };
 
@@ -34,12 +35,15 @@ h2 {
     width: 100%;
     flex-wrap: wrap;
     top: 160px;
+    z-index: -1;
     
 }
 
 .individualsPost {
+    position: relative;
     background-color: black;
     margin-bottom: 70px;
+    z-index: -1;
 }
 
 .postPic {
@@ -138,9 +142,12 @@ img.postImage{
         font-size: 16px;
     }
     userPosts {
-        color: pink
+        color: pink;
     }
 
+    @media only screen and (max-width: 800px) {
+        individualsPost: 33%;
+    }
 
     @media only screen and (max-width: 600px) {
         body {
