--- a/views/user_detail.ejs
+++ b/views/user_detail.ejs
@@ -2,6 +2,7 @@
 <%- include('_head') -%>
 <%- include('_header') -%>
 <body>
+    <button type="button" onclick="changeBackgroundColour()">Change Colour</button>
     <div class="userDetails">
         <h1 class="name"><%= name %></h1>
         <p class="username"><%= username%></p>
@@ -14,7 +15,7 @@
     <h2><%= name %>'s Posts</h2>
     <div class='ownPosts'>
         <% posts.forEach(function(post) {%>
-            <div class='individualsPost'>
+            <div class='individualsPost' id="individualsPost">
                 <img src='<%= post.imageUrl %>' class="postPic">
                 <p><%= name %></p>
                 <p><%= post.createdAt %></p>
